2001-08-25  Ulrich Drepper  <drepper@redhat.com>

	* po/tr.po: Update from translation team.

2001-08-24  Andreas Jaeger  <aj@suse.de>

	* iconv/Makefile (extra-objs): Add iconvconfig-modules so that
	make clean works.

2001-08-24  Ulrich Drepper  <drepper@redhat.com>

	* elf/rtld.c (print_statistics): Printf % after percent values.
	* elf/dl-misc.c (_dl_debug_vdprintf): Implement %%.

	* elf/dl-lookup.c (_dl_lookup_symbol): If we use the cache we
	don't have to compute the hash value and initialize current_value.
	Move reference_name variable to where it is needed.
	(_dl_lookup_versioned_symbol): Likewise.

2001-08-24  Roland McGrath  <roland@frob.com>

	* string/tester.c (test_strerror): Don't use _sys_errlist/_sys_nerr.
	Just test that strerror returns non-null for a few errno codes.

2001-08-23  Roland McGrath  <roland@frob.com>

	* hurd/Versions (libc: GLIBC_2.2.5): New set; add _hurd_raise_signal,
	_hurdsig_interrupt_timeout, _hurdsig_fault_preemptor.

	* sysdeps/posix/shm_unlink.c (shm_unlink): __unlink -> unlink.

	* mach/Versions (libc: GLIBC_2.2.5): New set; add __mach_msg_destroy,
	__mach_reply_port.

2001-08-24  Ulrich Drepper  <drepper@redhat.com>

	* nss/test-netdb.c (test_hosts): Don't segfault if gethostname
	returns NULL.

	* elf/do-rel.h (elf_dynamic_do_rel): Fix problem with ld.so
	startup.  Explicitly remove lazy part for RTLD_BOOTSTRAP since gcc
	doesn't do it.
	* elf/rtld.c: Include <sys/param.h>.
	* elf/dl-reloc.c: Likewise.

2001-08-24  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* sysdeps/unix/sysv/linux/mips/configure.in: Define AC_SUBST to
	empty to prevent junk from being generated.
	* sysdeps/unix/sysv/linux/mips/configure: Regenerated.

2001-08-24  Jakub Jelinek  <jakub@redhat.com>

	* elf/do-rel.h (elf_dynamic_do_rel): If l_addr is 0, skip relative
	records.  Rename endrel to relative, initialize it to r, and use it
	in elf_machine_rel_relative calls.  Point r after relative relocs.

2001-08-24  Ulrich Drepper  <drepper@redhat.com>
