@@ -1,3 +1,12 @@
+2001-08-26  Ulrich Drepper  <drepper@redhat.com>
+
+	* config.h.in: Add HAVE_Z_COMBRELOC.
+	* configure.in: Add test for -z combreloc.
+
+	* sysdeps/i386/dl-machine.h (elf_machine_rel): Minor cleanups and
+	optimizations.  Use HAVE_Z_COMBRELOC to avoid generaton of
+	R_386_RELATIVE handling for ld.so startup.
+
 2001-08-25  Ulrich Drepper  <drepper@redhat.com>
 
 	* po/tr.po: Update from translation team.
